package com.alouer.enums;

public enum UserType {
    CLIENT, INSTRUCTOR, ADMINISTRATOR
}
