public class Location {
    private int id;
    private String name;
    private String address;
    private String city;
    private String province;
    private int instructorId; // int?

    private Lesson[] lesson;
}
