@startuml Domain Model of the Alouer System

title Domain Model of the Alouer System

enum LessonType {
  GROUP
  PRIVATE
}

enum UserType {
  CLIENT
  INSTRUCTOR
}

enum DayOfWeek {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}


entity "Administrator" <<Singleton>> {
  -firstName: String
  -lastName: String
  -email: String
  -password: String
  -instance: Administrator
}

entity "Child" {
  -id: Integer
  -firstName: String
  -lastName: String
  -dateOfBirth: LocalDate
  -parentId: Integer
}

entity "Client" {
  -id: Integer
  -firstName: String
  -lastName: String
  -email: String
  -password: String
  -role: UserType
  -phoneNumber: String
}

entity "Instructor" {
  -id: Integer
  -firstName: String
  -lastName: String
  -email: String
  -password: String
  -role: UserType
  -phoneNumber: String
}

entity "Location" {
  -id: Integer
  -name: String
  -address: String
  -city: String
  -province: String
  -postalCode: String
}


entity "Booking" {
  -id: Integer
  -clientId: Integer
  -childId: Integer
  -lessonId: Integer
}

entity "Lesson" {
  -id: Integer
  -type: LessonType
  -title: String
  -locationId: Integer
  -assignedInstructorId: Integer
  -startTime: LocalTime
  -endTime: LocalTime
  -schedule: List<DayOfWeek>
  -bookingId: Integer
}

entity "BookingCollection" {
  +<u>bookings: List<Booking>
}

entity "ChildCollection" {
  +<u>children: List<Child>
}

entity "ClientCollection" {
  +<u>clients: List<Client>
}

entity "InstructorCollection" {
  +<u>instructors: List<Instructor>
}

entity "LessonCollection" {
  +<u>lessons: List<Lesson>
}

entity "LocationCollection" {
  +<u>locations: List<Location>
}

entity "Terminal" {}

"Administrator" -- "Terminal"

Client "1" --o "0..*" Child : has
Instructor "1" --o "0..*" Lesson : teaches
Location "1" --o "0..*" Lesson : offers
Lesson "1" --o "0..1" Booking : has
Client "1" --o "0..*" Booking : makes

"ClientCollection" *-- "Client" : contains
"InstructorCollection" *-- "Instructor" : contains
"ChildCollection" *-- "Child" : contains
"LocationCollection" *-- "Location" : contains
"LessonCollection" *-- "Lesson" : contains
"BookingCollection" *-- "Booking" : contains

"Terminal" -- "1" "ClientCollection"
"Terminal" -- "1" "InstructorCollection"
"Terminal" -- "1" "ChildCollection"
"Terminal" -- "1" "LocationCollection"
"Terminal" -- "1" "LessonCollection"
"Terminal" -- "1" "BookingCollection"

@enduml
